--- a/index.html
+++ b/index.html
@@ -626,11 +626,18 @@ body.bronze-theme {
 .navigation-buttons {
   display: flex;
   gap: 20px;
-  margin-top: 30px;
+  margin-top: 50px;
   justify-content: center;
   width: 100%;
+  padding-top: 30px;
+  border-top: 4px solid var(--minecraft-dark-gray);
 }
 
+.container .navigation-buttons,
+.help-content .navigation-buttons {
+  margin-top: auto;
+  padding-top: 40px;
+}
       .filter-options {
         flex-direction: column;
         align-items: center;
