--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
       align-items: center;
       position: relative;
       overflow-x: hidden;
+      overflow-y: auto;
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none; /* IE and Edge */
+    }
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    body::-webkit-scrollbar {
+      display: none;
     }
 
     body.red-theme {
